force-app/main/default/objects/EDealer_Relationship__c/EDealer_Relationship__c.object-meta.xml
<CustomObject>
    <label>EDealer Relationship</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>EDealer Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDealer Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>