force-app/main/default/objects/EDealer_Relationship__c/fields/Allow_Download_Of_Reports__c.field-meta.xml
<CustomField>
    <fullName>Allow_Download_Of_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Download Of Reports</label>
    <type>Checkbox</type>
</CustomField>