force-app/main/default/objects/EDealer_Relationship__c/fields/Allow_Upload_Of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Allow_Upload_Of_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Upload Of Orders</label>
    <type>Checkbox</type>
</CustomField>