force-app/main/default/objects/EDealer_Relationship__c/fields/ASI_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>ASI_Dealer_Code__c</fullName>
    <label>ASI Dealer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>