force-app/main/default/objects/EDealer_Relationship__c/fields/Availability_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Availability_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability Inquiry</label>
    <type>Checkbox</type>
</CustomField>