force-app/main/default/objects/EDealer_Relationship__c/fields/Dealer_Control_Of_Doests__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Control_Of_Doests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Control Of Doests</label>
    <type>Checkbox</type>
</CustomField>