force-app/main/default/objects/EDealer_Relationship__c/fields/Dealer_Doe_Status__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Doe_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Doe Status</label>
    <type>Checkbox</type>
</CustomField>