force-app/main/default/objects/EDealer_Relationship__c/fields/Dealer_Group__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Group__c</fullName>
    <label>Dealer Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>