force-app/main/default/objects/EDealer_Relationship__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>20</length>
    <type>Text</type>
</CustomField>