force-app/main/default/objects/EDealer_Relationship__c/fields/Interactive_Order_Entry__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Order_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactive Order Entry</label>
    <type>Checkbox</type>
</CustomField>