force-app/main/default/objects/EDealer_Relationship__c/fields/Order_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Order_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Inquiry</label>
    <type>Checkbox</type>
</CustomField>