force-app/main/default/objects/EDealer_Relationship__c/fields/Price_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Price_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Inquiry</label>
    <type>Checkbox</type>
</CustomField>