force-app/main/default/objects/EDealer_Relationship__c/fields/Return_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Return_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Inquiry</label>
    <type>Checkbox</type>
</CustomField>