force-app/main/default/objects/EDealer_Relationship__c/fields/Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Code__c</fullName>
    <label>Sub Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>